- Fixed an issue with the entry filter setting where the settings are not saved for the Update Fields step.